# giskard_gmto

./: README.md  give-me-the-odds  pyproject.toml  run_webpage.py
gmto/: __init__.py  cli.py  helpers.py  run_webpage.py
gmto/backend/: __init__.py  backend.py  graph.py
gmto/src/: helpers.py
gmto/src/backend/: backend.py  graph.py
gmto/src/web/static/: main.css
gmto/src/web/templates/: home.html
gmto/web/: __init__.py
gmto/web/templates/: home.html
tests/: test_gmto.py
